--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+  <link rel="icon" type="image/png" href="images/simon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-  <h1 id="level-title">Press a Key to Start</h1>
+  <h1 id="level-title">Press a Key on the keyboard to Start</h1>
   <div class="container">
     <div class="row">
 
@@ -35,6 +36,9 @@
     </div>
 
   </div>
+  <footer>
+    <p class = "copyright">© 2020 Sahil Joshi.</p>
+  </footer>
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src="game.js" charset="utf-8"></script>
 </body>
