--- a/index.html
+++ b/index.html
@@ -1,46 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>Simon</title>
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-  <link rel="icon" type="image/png" href="images/simon.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-
-<body>
-  <h1 id="level-title">Press a Key on the keyboard to Start</h1>
-  <div class="container">
-    <div class="row">
-
-      <div type="button" id="green" class="btn green">
-
-      </div>
-
-      <div type="button" id="red" class="btn red">
-
-      </div>
-    </div>
-
-    <div class="row">
-
-      <div type="button" id="yellow" class="btn yellow">
-
-      </div>
-      <div type="button" id="blue" class="btn blue">
-
-      </div>
+  <head>
+    <meta charset="utf-8">
+    <title>Instructions</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="icon" type="image/png" src="images/simon.png">
+  </head>
+  <body>
+    <h1 id = "pgtitle">Instructions for Simon Game</h1>
+    <div class="top">
+      <img class = "img" src="images/Color.png" alt="">
 
     </div>
+    <div class="middle">
+      1.) It is a memory game, which will help you spend time when bored 👨🏻‍💻. <br>
+      2.) Once you press a key on the keyboard, a color will blink - which you need to remember and press it to complete level 1. <br>
+      3.) Once you click on the starting colour, the game will randomly blink another color. Now you need to select the previous color and the new color which blinked. <br>
+      4.) As you progress, you need to keep the previous color combination in mind and then click on the new colour which blinks. <br>
+      5.) If you feel you're ready, click on Start to play!
+    </div>
+    <div class="bottom">
+      <a id = "link" href="playGame.html">Start</a>
+    </div>
 
-  </div>
-  <footer>
-    <p class = "copyright">© 2020 Sahil Joshi.</p>
-  </footer>
-  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-  <script src="game.js" charset="utf-8"></script>
-</body>
 
+
+  </body>
 </html>
