--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Instructions</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="icon" type="image/png" src="images/simon.png">
+    <link rel="icon" type="image/png" href="images/Simon.png">
   </head>
   <body>
     <h1 id = "pgtitle">Instructions for Simon Game</h1>
@@ -21,7 +21,7 @@
       5.) If you feel you're ready, click on Start to play!
     </div>
     <div class="bottom">
-      <a id = "link" href="playGame.html">Start</a>
+      <a class="btn btn-primary" href="playGame.html" role="button" style = "height: 40px; width:100px;">Start</a>
     </div>
 
 
