--- a/playGame.html
+++ b/playGame.html
@@ -6,7 +6,7 @@
   <title>Simon</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-  <link rel="icon" type="image/png" src="images/simon.png">
+  <link rel="icon" type="image/png" href="images/Simon.png">
 </head>
 
 <body>
