Change Ordering of the instructions page

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="icon" type="image/png" href="images/Simon.png">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <h1 id = "pgtitle">Instructions for Simon Game</h1>
@@ -14,11 +15,13 @@
 
     </div>
     <div class="middle">
-      1.) It is a memory game, which will help you spend time when bored 👨🏻‍💻. <br>
-      2.) Once you press a key on the keyboard, a color will blink - which you need to remember and press it to complete level 1. <br>
-      3.) Once you click on the starting colour, the game will randomly blink another color. Now you need to select the previous color and the new color which blinked. <br>
-      4.) As you progress, you need to keep the previous color combination in mind and then click on the new colour which blinks. <br>
-      5.) If you feel you're ready, click on Start to play!
+      <ul>
+        <li>It is a memory game, which will help you spend time when bored 👨🏻‍💻.</li>
+        <li>Once you press a key on the keyboard, a color will blink - which you need to remember and press it to complete level 1.</li>
+        <li>Once you click on the starting colour, the game will randomly blink another color. Now you need to select the previous color and the new color which blinked.</li>
+        <li>As you progress, you need to keep the previous color combination in mind and then click on the new colour which blinks.</li>
+        <li>If you feel you're ready, click on Start to play!</li>
+      </ul>
     </div>
     <div class="bottom">
       <a class="btn btn-primary" href="playGame.html" role="button" style = "height: 40px; width:100px;">Start</a>
