--- a/playGame.html
+++ b/playGame.html
@@ -4,38 +4,40 @@
 <head>
   <meta charset="utf-8">
   <title>Simon</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   <link rel="icon" type="image/png" href="images/Simon.png">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 </head>
 
 <body>
-  <h1 id="level-title">Press a Key on the keyboard to Start</h1>
-  <div class="container">
-    <div class="row">
+  <h1 id="level-title">Click on "Play"</h1>
+  <div class="row bcontainer">
+    <div class="">
 
-      <div type="button" id="green" class="btn green">
+      <div type="button" id="green" class="btns green">
 
       </div>
 
-      <div type="button" id="red" class="btn red">
+      <div type="button" id="red" class="btns red">
 
       </div>
     </div>
 
-    <div class="row">
+    <div class="">
 
-      <div type="button" id="yellow" class="btn yellow">
+      <div type="button" id="yellow" class="btns yellow">
 
       </div>
-      <div type="button" id="blue" class="btn blue">
+      <div type="button" id="blue" class="btns blue">
 
       </div>
 
     </div>
-
+    <button type="button" class="start btn-light btn-lg">Play</button>
   </div>
+
   <footer>
     <p class = "copyright">© 2020 Sahil Joshi.</p>
   </footer>
