--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <div class="middle">
       <ul>
         <li>It is a memory game, which will help you spend time when bored 👨🏻‍💻.</li>
-        <li>Once you press a key on the keyboard, a color will blink - which you need to remember and click to complete level 1.</li>
-        <li>Once you click on the starting colour, the game will randomly blink another color. Now you need to select the previous color and the new color which blinked.</li>
+        <li>Once you press the "Play" button, a color will blink - which you need to remember and press to complete level 1.</li>
+        <li>Once you press on the starting colour, the game will randomly blink another color. Now you need to select the previous color and the new color which blinked.</li>
         <li>As you progress, you need to keep the previous color combination in mind and then click on the new colour which blinks.</li>
         <li>If you feel you're ready, click on Start to play!</li>
       </ul>
