--- a/playGame.html
+++ b/playGame.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Simon</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   <link rel="icon" type="image/png" href="images/Simon.png">
@@ -35,14 +34,15 @@
       </div>
 
     </div>
-    <button type="button" class="start btn-light btn-lg">Play</button>
+    <button type="button" class="start">Play</button>
   </div>
 
-  <footer>
-    <p class = "copyright">© 2020 Sahil Joshi.</p>
-  </footer>
+
   <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
   <script src="game.js" charset="utf-8"></script>
 </body>
+<footer>
+  <p class = "copyright">© 2020 Sahil Joshi.</p>
+</footer>
 
 </html>
