Conflict not found

--- a/playGame.html
+++ b/playGame.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="utf-8">
   <title>Simon</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
   <link rel="icon" type="image/png" href="images/Simon.png">
@@ -35,7 +34,7 @@
       </div>
 
     </div>
-    <button type="button" class="btn btn-lg btn-danger start">Play</button>
+    <button type="button" class="start"><h3>Play</h3></button>
   </div>
 
 
